--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,17 +34,21 @@ android {
     buildFeatures {
         dataBinding true
     }
+    namespace 'id.dipoengoro.githubuser'
 }
 
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'com.squareup.moshi:moshi-kotlin:1.13.0'
-    implementation 'com.google.code.gson:gson:2.9.1'
+    implementation 'com.squareup.moshi:moshi-kotlin:1.14.0'
+    implementation 'com.google.code.gson:gson:2.10'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'androidx.core:core-splashscreen:1.0.0'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
